# chem-flow

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  README_COVERAGE.md  docker-compose.coverage.yml  docker-compose.yml  entrypoint.sh  sonar-project.properties  todo.md
.github/workflows/: ci.yaml
.scannerwork/: report-task.txt
coverage/: cobertura.xml  lcov.info  sonar-generic-coverage.xml
crates/chem-domain/: Cargo.toml  README.md
crates/chem-domain/src/: domain_repository.rs  domain_stubs.rs  errors.rs  family_property.rs  lib.rs  molecular_property.rs  molecule.rs  molecule_family.rs
crates/chem-persistence/: Cargo.toml  README.md
crates/chem-persistence/examples/: persistence_simple_usage.rs  simple_usage.rs
crates/chem-persistence/migrations/00000000000001_create_schema/: down.sql  up.sql
crates/chem-persistence/migrations/00000000000002_create_chem_tables/: down.sql  up.sql
crates/chem-persistence/migrations/00000000000003_add_structure_to_molecules/: down.sql  up.sql
crates/chem-persistence/src/: domain_persistence.rs  flow_persistence.rs  lib.rs  schema.rs
crates/chem-persistence/tests/: domain_persistence.rs  integration_tests.rs  structure_integration.rs
crates/chem-providers/: Cargo.toml  README.md  requirements.txt
crates/chem-providers/python/: rdkit_wrapper.py
crates/chem-providers/src/: core.rs  lib.rs
crates/chem-workflow/: Cargo.toml  README.md
crates/chem-workflow/examples/: cadma_example.rs  simple_usage.rs
crates/chem-workflow/src/: errors.rs  lib.rs  workflow_type.rs
crates/chem-workflow/src/engine/: chemical_flow.rs  mod.rs
crates/chem-workflow/src/factory/: mod.rs  workflow_factory.rs
crates/chem-workflow/src/flows/: mod.rs
crates/chem-workflow/src/flows/cadma_flow/: cadma_flow.rs  mod.rs  state.rs
crates/chem-workflow/src/flows/cadma_flow/steps/: admetsa_properties_step2.rs  family_reference_step1.rs  mod.rs  molecule_initial_step3.rs  step1.rs  step2.rs  step3.rs
crates/chem-workflow/src/persistence/: mod.rs  repo_adapter.rs
crates/chem-workflow/src/step/: context.rs  mod.rs  trait_step.rs
crates/chem-workflow/tests/: step_context_integration.rs
crates/flow/: Cargo.toml  README.md  create.md
crates/flow/examples/: flow_simple_usage.rs  simple_usage.rs
crates/flow/src/: domain.rs  engine.rs  errors.rs  lib.rs  repository.rs  service.rs  stubs.rs
crates/flow/tests/: full_system.rs  meta_tests.rs  repo_inmemory.rs  stubs_and_engine.rs
examples/: example-domain.rs  example-main.rs
scanner/sonar-scanner-4.8.0.2856-linux/conf/: sonar-scanner.properties
scripts/: generate_coverage.sh  run_sonar.sh  run_tests_in_docker.sh
src/: main.rs
