[package]
name = "chemflow-rust"
version = "0.1.0"
edition.workspace = true

[workspace.package]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
rayon = "1.5"
dashmap = "6.1"
indexmap = "2.11"
dotenvy = "0.15"
once_cell = "1.19"
sha2 = "0.10"
chem-domain = { path = "crates/chem-domain" }
flow = { path = "crates/flow" }
chem-persistence = { path = "crates/chem-persistence" }
postgres = "0.19"


[dev-dependencies]
tokio-test = "0.4"
cargo-tarpaulin = "0.32"
grcov = "0.10"

[[bin]]
name = "main-core"
path = "src/main.rs"



[workspace]
members = [
  "crates/chem-domain",
  "crates/flow",
  "crates/chem-persistence",
  "crates/chem-providers",
  "crates/chem-workflow"
]

[patch.crates-io]
pyo3 = { git = "https://github.com/PyO3/pyo3", tag = "v0.26.0" }

[features]
# Enable Postgres demo by default so the default `main-core` binary
# is compiled to use Postgres. Production builds that don't want Postgres
# can opt out or the feature can be removed in CI as needed.
default = ["pg_demo"]
# Habilita el ejemplo de persistencia en Postgres desde main.rs
pg_demo = ["chem-persistence/pg"]
