[package]
name = "chem-persistence"
version = "0.1.0"
edition = "2021"

# By default we do not force Postgres so that `cargo test` runs use
# the lightweight SQLite backend. Production builds should enable the
# `pg` feature (for example via `--features pg`).
[features]
default = []
# Desactiva la inserción de artifacts (para aislar posibles segfaults en tests)
no-artifact-insert = []
# Feature alias to enable the Postgres backend in Diesel
pg = ["diesel/postgres"]

[dependencies]
flow = { path = "../flow" }
chem-domain = { path = "../chem-domain" }
diesel_migrations = { version = "2.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
dotenvy = "0.15"
r2d2 = "0.8"
once_cell = "1.19"
log = "0.4"
## Enable both backends to allow running SQLite-only test paths while
## preferring Postgres in normal builds. Runtime selection is done in
## code via cfg(test) and environment detection.
diesel = { version = "2.3.1", features = ["postgres", "sqlite", "r2d2", "chrono", "serde_json", "uuid"] }


[dev-dependencies]
diesel = { version = "2.3.1", features = ["sqlite"] }
serde_json = "1.0"
