[package]
name = "chem-workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

# workspace crates as path deps
flow = { path = "../flow" }
chem-domain = { path = "../chem-domain" }
chem-persistence = { path = "../chem-persistence" }

[lib]
name = "chem_workflow"
path = "src/lib.rs"
